--- a/技术栈/架构设计/电商秒杀设计.md
+++ b/技术栈/架构设计/电商秒杀设计.md
@@ -4,9 +4,20 @@
 # 流量
 秒杀的特点是**流量突发且集中**，流量又可以**普通流量**和**热点流量**，热点流量可以是高频查询或扣减次数多的热点行数据，相对应是就是普通流量，访问和扣减相对均匀。  
 那识别普通流量和热点流量可以采用两种方式：  
-* 本地并发度热点识别：单商品ID单机扣减次数超过3即被认为是热点；
-* 全局QPS热点识别：单商品ID全局QPS超过500即被认为是热点；
+* 本地并发度热点识别：单商品单机扣减次数超过3即被认为是热点；
+* 全局QPS热点识别：单商品全局QPS超过500即被认为是热点；
 
 # 系统
-并发场景要优先保证系统的可靠性和稳定性，然后再考虑高性能。对于可靠性和稳定性来说，可以采用的技术栈有：限流、排队和降级，缓存和DB做分桶分布式部署。
-### 限流
+并发场景要优先保证系统的可靠性和稳定性，然后再考虑高性能。对于可靠性和稳定性来说，可以采用的技术栈有：热点限流、扣减排队和系统降级，缓存和DB做分桶分布式部署。
+### 热点限流
+热点限流又可以区分**并发限流**和**QPS限流**，先来看看常见限流的优缺点：
+|算法|简介|优缺点|
+| -- | -- | -- |
+|[固定窗口](https://juejin.cn/post/7056068978862456846)|固定窗口计数|流量很容易到达阈值，抗脉冲能力较弱|
+|[滑动窗口](https://juejin.cn/post/7056068978862456846)|滑动窗口计数|抗脉冲能力强，尤其窗口越小，抗脉冲能力更强，但误限越严重|
+|[令牌桶](https://juejin.cn/post/7056068978862456846)|匀速放入，并限制流出|瞬间流量可到达2倍阈值，抗脉冲能力较弱|
+|漏桶|不限制放入，匀速流出|流量整形最好，误限最严重|
+
+QPS限流常见算法主要有固定窗口、滑动窗口、漏桶、令牌桶这几种，固定窗口和漏桶由于其显而易见的缺点首先被排除，那么就剩下滑动窗口和令牌桶这两种算法：
+* 滑动窗口算法具有较好的抗脉冲能力。抗脉冲能力是库存热点扣减限流非常重要的能力。
+* 令牌桶算法抗脉冲能力弱于滑动窗口，但又有库存的另一种能力：库存预热。
