--- a/技术栈/架构设计/电商秒杀设计.md
+++ b/技术栈/架构设计/电商秒杀设计.md
@@ -21,3 +21,13 @@
 QPS限流常见算法主要有固定窗口、滑动窗口、漏桶、令牌桶这几种，固定窗口和漏桶由于其显而易见的缺点首先被排除，那么就剩下滑动窗口和令牌桶这两种算法：
 * 滑动窗口算法具有较好的抗脉冲能力。抗脉冲能力是库存热点扣减限流非常重要的能力。
 * 令牌桶算法抗脉冲能力弱于滑动窗口，但又有库存的另一种能力：库存预热。
+
+## 扣减排队
+扣减排队可以使用的技术栈：
+* **数据库锁**  
+  使用关系型数据库的行锁和事务来实现扣减排队。
+* **分布式锁**  
+  可以使用Redis的SETNX来实现分布式锁或者使用zookeeper的节点创建和观察机制实现锁的获取和释放，以及排队等待。
+* **消息队列**
+  可以把扣减请求发送到RocketMQ或Kafka中，消费者按照消息的顺序型实现扣减操作。
+  
