--- a/词语积累/技术词语.md
+++ b/词语积累/技术词语.md
@@ -1,4 +1,7 @@
 * **长尾问题**  
   由于数据量大或任务队列较长导致关键数据或任务未及时处理的这类问题可以成为长尾问题。
-* **卡点**
-* 
+* **卡点**  
+* **回源**  
+  回源是在计算机网络、内容分发网络（CDN）等领域中常用的术语，指的是当客户端请求的内容在缓存服务器中未找到时，缓存服务器向源服务器请求获取该内容的过程。
+
+  
