--- a/词语积累/技术词语.md
+++ b/词语积累/技术词语.md
@@ -3,5 +3,9 @@
 * **卡点**  
 * **回源**  
   回源是在计算机网络、内容分发网络（CDN）等领域中常用的术语，指的是当客户端请求的内容在缓存服务器中未找到时，缓存服务器向源服务器请求获取该内容的过程。
+* **灰度流量**  
+  灰度流量是指在将新的软件版本、功能或系统变更全面部署之前，先将一部分流量引导到新版本或变更后的环境中进行测试和验证。这部分被引导的流量就称为灰度流量。
+  比如：缓存预热可以通过灰度流量，甚至手动将数据加载到缓存中去预热，避免缓存击穿。
+
 
   
