--- a/程序员英文面试/面试问答.md
+++ b/程序员英文面试/面试问答.md
@@ -1,5 +1,20 @@
-* What made you leave your previous company?
+* **What made you leave your previous company?**
   * Due to current bad enonomic environment, my previous company was no excetion, so the company decided to lay of employees.
   * My current company constract is short-term, assiged to responiable for a product, the product will fish and wo need to leave.
 
-* 
+* **What have you learned from your previous job?**  
+  as a product develop leader, I would like to introduce three aspects: technical capabilities、product and business thinking、team communication;
+
+* **Why do you want to work for us?**
+
+* **What are you strong points and weak points?**  
+  I think I'm open and willing to continue learning, in terms of technology, I'm willing to learn some cutting-edge technologies. In addition, I like to learn business and product thinking.
+  I think my weak points is my english is not so good😊
+
+* **Do you like work with people?**  
+  yes, I've to work with others, I can learn some strongths from them.
+
+* **Why did you choose your major?**  
+  I first choice for university is civil engineering, because it was very popular at that time, but I second choice is computer major and after entering university, I also become interested in computer major.
+
+  
