--- a/程序员英文面试/面试问答.md
+++ b/程序员英文面试/面试问答.md
@@ -17,5 +17,8 @@
 * **Why did you choose your major?**  
   I first choice for university is civil engineering, because it was very popular at that time, but I second choice is computer major and after entering university, I also become interested in computer major.
 
-* **What is the most challenging aspect of your current project?**
+* **What is the most challenging aspect of your current project?**  
+  
+* **What are your career goals？**
+  
   
