--- a/程序员英文面试/面试问答.md
+++ b/程序员英文面试/面试问答.md
@@ -1,5 +1,5 @@
 * **What made you leave your previous company?**
-  * Due to current bad enonomic environment, my previous company was no excetion, so the company decided to lay of employees.
+  * Due to current bad enonomic environment, my previous company was no excetion, so the company decided to lay off employees.
   * My current company constract is short-term, assiged to responiable for a product, the product will fish and wo need to leave.
 
 * **What have you learned from your previous job?**  
