--- a/程序员英文面试/面试问答.md
+++ b/程序员英文面试/面试问答.md
@@ -1,6 +1,6 @@
 * **What made you leave your previous company?**
   * Due to current bad enonomic environment, my previous company was no excetion, so the company decided to lay off employees.
-  * My current company constract is short-term, assiged to responiable for a product, the product will fish and wo need to leave.
+  * My current company constract is short-term, assiged to responiable for a product, the product will fish at the end of may and we need to leave.
 
 * **What have you learned from your previous job?**  
   as a product develop leader, I would like to introduce three aspects: technical capabilities、product and business thinking、team communication;
