--- a/程序员英文面试/面试问答.md
+++ b/程序员英文面试/面试问答.md
@@ -17,7 +17,8 @@
 * **Why did you choose your major?**  
   I first choice for university is civil engineering, because it was very popular at that time, but I second choice is computer major and after entering university, I also become interested in computer major.
 
-* **What is the most challenging aspect of your current project?**  
+* **What is the most challenging aspect of your current project?**
+  I think the biggest challenge for me was in my previous company. Due to the single-process nature of PHP, I used Golang to rebuild the underlying graph data.
   
 * **What are your career goals？**
   
